# rightmove-scraper

./: .gitignore  README.md  base_args.py  combine_chunks.py  constants.py  create_mappings.py  get_chunks.py  get_dupes.py  pyproject.toml  requirements.txt  step_1_get_sitemaps.py  step_2_get_chunks.py  step_2_get_locations.py  step_3_combine_chunks.py  step_3_create_mappings.py  step_4_create_mappings.py  tfl.py  utils.py
config/: app.yaml
rightmove_scraper/: config.py  location_scraper.py  sitemap_scraper.py  utils.py
