[build-system]
requires = [
    "setuptools",
    "wheel",
]

[project]
name="rightmove_scraper"
version="0.1.0"
dependencies = [
    "beautifulsoup4 ~= 4.12.3",
    "haversine ~= 2.8.1",
    "lxml ~= 5.1.0",
    "pydantic ~= 2.8.2",
    "pydantic-yaml ~= 1.3.0",
    "tflwrapper ~= 1.1.8",
    "tqdm ~= 4.66.2",
    "utils_python @ git+https://github.com/qwrwed/utils-python.git",
    "black",
    "isort",
]

[tool.setuptools]
packages = ["rightmove_scraper"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
